--- a/index.html
+++ b/index.html
@@ -38,7 +38,32 @@
     </nav>
     <section id="profile">
         <div class="section_pic-container">
-            <img src="IMG_4250.jpg" alt="">
+            <img src="./assets/IMG_4250.jpg" alt="profile-picture">
+        </div>
+        <div class="section_text">
+            <p class="section_text_p1">Hello I'm</p>
+            <h1 class="title">Victoria Beatrice Øverbø</h1>
+            <p class="section_text_p2">Frontend Developer</p>
+            <div class="btn-container"></div>
+            <button class="btn btn-color-2" onclick="window.open('./assets/VBØ-CV.pdf')">
+                Download CV</button>
+            <button class="btn btn-color-1" onclick="location.href='./#contact'">
+                Contact</button>
+                <div id="sosial-container"> 
+                    <img 
+                    src="./assets/LinkedIn.png" 
+                    alt="MyLinkedInPage" 
+                    class="icon" 
+                    onclick="location.href=
+                    'https://www.linkedin.com/in/victoria-beatrice-%C3%B8-7a86751b6/'">
+                <img 
+                src="./assets/Github.png" 
+                alt="MyGuthubPage" 
+                class="icon" 
+                onclick="location.href=
+                'https://github.com/VictoriaOverbo'">
+            
+            </div>
         </div>
     </section>
     <script src="script.js"></script>
