--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav id="desktop-nav">
-        <div class="logo">Victoria  Øverbø</div>
+        <div class="logo">Victoria Beatrice Øverbø</div>
         <div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
@@ -228,6 +228,55 @@
                 </div>
             </div>
         </div>
+        </div>
+        <img 
+        src="./assets/arrow.png" 
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#projects'"/>
+    </section>
+    <section id="projects">
+        <p class="section_text_p1"></p>
+        <h1 class="title"></h1>
+        <div class="experience-details-container">
+            <div class="details-container color-container">
+                <div class="article-container">
+                    <img
+                    src="./"
+                    alt="project1"
+                    class="project-img"
+                    />
+                </div>
+                <h2 class="experience-sub-title project-title">Tasky</h2>
+                <div class="btn-container">
+                    <button 
+                    class="btn btn-color-2 projevt-btn"
+                    onclick="location.href=''"
+                    >
+                    Guthub
+                    </button>
+                    
+                </div>
+            </div>
+            <div class="details-container color-container">
+                <div class="article-container">
+                    <img
+                    src="./"
+                    alt="project1"
+                    class="project-img"
+                    />
+                </div>
+                <h2 class="experience-sub-title project-title">Medvandrer</h2>
+                <div class="btn-container">
+                    <button 
+                    class="btn btn-color-2 projevt-btn"
+                    onclick="location.href=''"
+                    >
+                    Guthub
+                    </button>
+                    
+                </div>
+            </div>
         </div>
         <img 
         src="./assets/arrow.png" 
